k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upwind-app
  labels:
    name: upwind-app
